<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6049D0"
    tools:context=".secondTshirt">

    <TextView
        android:id="@+id/stickerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/t_shirts"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/stickername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/chalik_nblack"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="190dp"
        android:text="@string/price"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/priceNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="210dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_100"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/priceNum"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/backgroundforstickers">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/choose_size"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="20dp">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/l" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="170dp"
            android:padding="10dp"
            android:text="@string/lorem_ipsum_dolor_sit_amet_id_qui_invidunt_insolens_disputando_te_modus_discere_democritum_quo_ut_pro_prima_lorem"
            android:textSize="16sp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="280dp"
            android:background="@drawable/forbuybutton"
            android:text="@string/buy_now"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/stick"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/chalikblack" />
</RelativeLayout>